--- a/simcon_project/templates/researcher_view.html
+++ b/simcon_project/templates/researcher_view.html
@@ -1,35 +1,48 @@
+{% load render_table from django_tables2 %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
-
-    <!-- prevent line breaks when using form fields -->
-    <style type="text/css">
-    form {display:inline; margin:0px; padding:0px;}
-    </style>
-    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"> </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="simcon.css">
 
     <title>
-    {% block title %}Simulated Conversations | Researcher{% endblock %}
+    SimCon | Researcher View
     </title>
-    
-    {% block extrahead %} {% endblock %}
   </head>
-
   <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Simulated Conversations</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Create Template</a></li>
+          <li><a href="#">Add Student</a></li>
+          <li><a href="#">Create Assignment</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><span class="glyphicon glyphicon-user"></span> User</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="container">
-      <h1> THIS IS THE Researcher PAGE</h1>
-        {% block content %}
-        {% endblock %}
-    </div> <!-- /container -->
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-
-    <!-- Placed at the end of the document so the pages load faster -->
+      <h1> To do </h1>
+      <h2> ~ Add Table for response (query responses)</h2>
+      <h2> ~ Add Search bars for template/label/student_name</h2>
+    </div> 
+<div> 
+  {% render_table responseTable %}
+</div>
   </body>
 </html>
