Resolve merge conflicts.

--- a/simcon_project/templates/researcher_settings_view.html
+++ b/simcon_project/templates/researcher_settings_view.html
@@ -26,8 +26,33 @@
     </head>
     <body>
     <div class="container-fluid mt-3" style="width: 80%">
+        {% if researchers_table %}
+            <h3>Researchers</h3>
+            {% render_table researchers_table %}
+        {% else %}
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <br>
+                    <p>There are no researchers to display.</p>
+                    <br>
+                </div>
+            </div>
+        {% endif %}
+        {% if add_researcher_form %}
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <p style="text-align:left">Add New Researcher:</p>
+                    <form id="add_researcher_form" method="post">
+                        {% csrf_token %}
+                        {{ add_researcher_form }}
+                        <br>
+                        <button type="submit" class="btn btn-outline-secondary" form="add_researcher_form" name="add_researcher">Send Registration Email</button>
+                    </form>
+                    <br><br><br>
+                </div>
+            </div>
+        {% endif %}
         <div class="row justify-content-center">
-
             <div class="col-4">
                 <form id="change_password_form" method="post">
                     {% csrf_token %}
@@ -51,25 +76,6 @@
                 <br>
             </div>
         </div>
-
-        {% if researchers_table %}
-            {% render_table researchers_table %}
-        {% endif %}
-        <br>
-        {% if add_researcher_form %}
-            <form id="add_researcher_form" method="post">
-                {% csrf_token %}
-                {{ add_researcher_form }}
-                <button type="submit" class="btn btn-outline-secondary" form="add_researcher_form" name="add_researcher">Send Registration Email</button>
-            </form>
-        {% endif %}
-
-        {% for message in messages %}
-            <div class="alert alert-warning">
-                <a class="close" href="#" data-dismiss="alert">×</a>
-                {{ message }}
-            </div>
-        {% endfor %}
     </div> <!-- /container -->
 
     <!-- Bootstrap core JavaScript
