--- a/simcon_project/templates/delete_researcher_button.html
+++ b/simcon_project/templates/delete_researcher_button.html
@@ -3,5 +3,5 @@
  -->
 {% block content %}
     <button id="delete-template" class="bs-modal btn btn-sm btn-outline-secondary" type="button" name="button"
-            data-form-url="{% url 'settings:delete-researcher' record.id %}">Delete</button>
+            data-form-url="{% url 'delete-researcher' record.id %}">Delete</button>
 {% endblock %}
