--- a/simcon_project/templates/researcher_base.html
+++ b/simcon_project/templates/researcher_base.html
@@ -22,6 +22,9 @@
           <li class="px-3">{% block nav-researcherView %}<a class="nav_bar_unselected" href="{% url 'researcher-view' %}">  <span >   Home   </span> </a>{% endblock %}</li>
           <li class="px-3">{% block nav-templateView %}<a class="nav_bar_unselected" href="{% url 'management:main' %}">  <span> Templates </span>  </a>{% endblock %}</li>
           <li class="px-3">{% block nav-studentmanagementView %}<a class="nav_bar_unselected" href="{% url 'student-management' %}">   Student Management   </a>{% endblock %}</li>
+            {% if user.is_staff %}
+                <li class="px-3">{% block nav-researcherManagementView %}<a class="nav_bar_unselected" href="{% url 'researcher-management' %}">   Researcher Management   </a>{% endblock %}</li>
+            {% endif %}
         </ul>
         <ul class="nav navbar-nav justify-content-end">
           <li class="px-3">{% block nav-settingsView %}<a class="nav_bar_unselected" href="{% url 'settings:main' %}"> Settings</a>{% endblock %}</li>
