--- a/simcon_project/templates/student_settings_view.html
+++ b/simcon_project/templates/student_settings_view.html
@@ -3,46 +3,49 @@
 {% load static %}
 {% load render_table from django_tables2 %}
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
+        <title>{% block title %}SimCon | Settings{% endblock %}</title>
+        <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
+    </head>
+    <body>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
+    <div class="container-fluid mt-3" style="width: 80%;">
+        {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger alert-dismissible">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <div class="alert alert-danger alert-dismissible">
+                    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                    <strong>{{ error|escape }}</strong>
+                </div>
+            {% endfor %}
+        {% endif %}
 
-    <!-- prevent line breaks when using form fields -->
-    <style type="text/css">
-    form {display:inline; margin:0px; padding:0px;}
-    </style>
-
-
-    <title>
-    {% block title %}SimCon | Settings{% endblock %}
-    </title>
-      <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
-
-    {% block extrahead %} {% endblock %}
-  </head>
-  <body>
-      {% for message in messages %}
-      <div class="alert alert-warning">
-          <a class="close" href="#" data-dismiss="alert">×</a>
-          {{ message }}
-      </div>
-  {% endfor %}
-      <div class="container-fluid mt-3" style="width: 80%;">
         <div class="row justify-content-center">
-
             <div class="col-4 m-3 p-3" style="background-color: white;   border-radius: 5px;">
-                <form id="change_password_form" method="post">
+                <form id="form" method="post">
                     {% csrf_token %}
-                    {% for field in change_password_form %}
+                    {% for field in form %}
                         <div class="form-group">
-                            <label for="{{ field.attrs.id  }}">{{ field.label }}: </label>
-                            <br>
-                            {{ field }}
+                            <div class="mb-3">
+                                {{ field.label }}:
+                                {{ field.auto_id }}
+                                {% for error in field.errors %}
+                                    {{ error }}
+                                {% endfor %}
+                            </div>
                         </div>
                     {% endfor %}
                     <p>
@@ -54,15 +57,13 @@
                         <br>
                         - Your password can’t be entirely numeric.
                     </p>
-                    <button type="submit" class="btn btn-outline-secondary" form="change_password_form" name="change_password">Save changes</button>
+                    <button type="submit" class="btn btn-outline-secondary" form="form" name="change_password">Save changes</button>
                 </form>
                 <br>
             </div>
         </div>
+    </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-  </body>
-</html>
+    </body>
+    </html>
 {% endblock %}
