change title, delete feedback per node, pad login, favicon error is a per browser error

--- a/simcon_project/templates/researcher_settings_view.html
+++ b/simcon_project/templates/researcher_settings_view.html
@@ -18,11 +18,10 @@
         </style>
 
         <title>
-            {% block title %}Simulated Conversations | Settings{% endblock %}
+            SimCon | Settings
         </title>
         <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 
-        {% block extrahead %} {% endblock %}
     </head>
     <body>
     <div class="container-fluid mt-3" style="width: 80%">
