--- a/simcon_project/templates/researcher_view.html
+++ b/simcon_project/templates/researcher_view.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
     <link rel="stylesheet" href="{% static 'users/researcherTable.css' %}">
     <title>
-    SimCon | Researcher View
+    SimCon | Home
     </title>
     <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
   </head>
