--- a/simcon_project/templates/student_management.html
+++ b/simcon_project/templates/student_management.html
@@ -12,10 +12,9 @@
         </style>
 
         <title>
-            {% block title %}Simulated Conversations | Researcher{% endblock %}
+            SimCon | Student
         </title>
 
-        {% block extrahead %} {% endblock %}
     </head>
 
     <div class="container-fluid mt-3" style="width: 80%">
