--- a/simcon_project/templates/student_registration.html
+++ b/simcon_project/templates/student_registration.html
@@ -14,10 +14,10 @@
     </style>
 
     <title>
-    {% block title %}Simulated Conversations | Student{% endblock %}
+    SimCon | Registration
     </title>
+    <link rel="shortcut icon" href="{% static './title_image/favicon.ico' %}" type="image/x-icon">
     
-    {% block extrahead %} {% endblock %}
   </head>
 
   <div>
