--- a/simcon_project/templates/template_management/main_view.html
+++ b/simcon_project/templates/template_management/main_view.html
@@ -6,7 +6,7 @@
 {% block content %}
     <html lang="en">
     <head>
-        <title>Template Management</title>
+        <title>SimCon | Templates</title>
         <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
     </head>
     <body>
