--- a/simcon_project/templates/view_response.html
+++ b/simcon_project/templates/view_response.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
         <title>
-            {% block title %}Simulated Conversations | Researcher{% endblock %}
+            SimCon | Response View
         </title>
     </head>
 
