--- a/simcon_project/templates/registration/login.html
+++ b/simcon_project/templates/registration/login.html
@@ -2,7 +2,9 @@
 {% load static %}
 <html lang="en">
 <head>
-    <title>SimCon</title>
+
+    <link rel="shortcut icon" href="{% static './title_image/favicon.ico' %}" type="image/x-icon">
+    <title>SimCon | Login </title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +18,7 @@
 <body>
 
 <div class="container">
-    <div class="card p-3">
+    <div class="card p-5">
         <form method="post">
             {% csrf_token %}
             <form method="post">
