--- a/simcon_project/templates/registration/password_reset_confirm.html
+++ b/simcon_project/templates/registration/password_reset_confirm.html
@@ -2,7 +2,8 @@
 {% load static %}
 <html lang="en">
 <head>
-    <title>SimCon</title>
+    <title>SimCon | Password Reset</title>
+    <link rel="shortcut icon" href="{% static './title_image/favicon.ico' %}" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
