--- a/simcon_project/templates/student_base.html
+++ b/simcon_project/templates/student_base.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" src="{% static 'users/base.css' %}">
+    <link rel="stylesheet" href="{% static 'users/base.css' %}">
+    <link rel="shortcut icon" href="{% static './title_image/favicon.ico' %}" type="image/x-icon">
   </head>
   <body>
     {% block nav %}
