--- a/simcon_project/templates/student_view.html
+++ b/simcon_project/templates/student_view.html
@@ -13,10 +13,9 @@
     <link rel="stylesheet" href="{% static 'users/student_home.css' %}">
     <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
     <title>
-    {% block title %}Simulated Conversations | Student{% endblock %}
+    SimCon | Home
     </title>
     
-    {% block extrahead %} {% endblock %}
   </head>
 
   <body>
