--- a/simcon_project/templates/template_all_responses_view.html
+++ b/simcon_project/templates/template_all_responses_view.html
@@ -3,7 +3,7 @@
 {% load export_url from django_tables2 %}
 {% block content %}
 <head>
-    <title>SimCon | Template Response View</title>
+    <title>SimCon | Template Response</title>
 </head>
 <body>
     {% if not table %}
