Made it so All Templates link is shown when there are no folders.

--- a/simcon_project/templates/template_management/folder_table.html
+++ b/simcon_project/templates/template_management/folder_table.html
@@ -19,6 +19,8 @@
                 {% endfor %}
                 </tr>
                 </thead>
+            {% else %}
+                <th></th>
             {% endif %}
             {% endblock table.thead %}
             {% block butts %}
