Custom Choice -> custom response

--- a/simcon_project/templates/feedback/view_feedback.html
+++ b/simcon_project/templates/feedback/view_feedback.html
@@ -42,7 +42,7 @@
         <div class="row">
             <h3> Response {{node.position_in_sequence}}
             {% if node.custom_response != Null %}
-            <p><strong>Custom Choice: </strong> {{ node.custom_response }}
+            <p><strong>Custom Response: </strong> {{ node.custom_response }}
             {% else %}
             <p><strong>Selected choice: </strong> {{ node.selected_choice.choice_text }}
             {% endif %}
