--- a/simcon_project/templates/view_response.html
+++ b/simcon_project/templates/view_response.html
@@ -67,7 +67,7 @@
                                         <div class="col">
                                             <p><strong>Step description: </strong> {{ node.template_node.description }} </p>
                                             {% if node.custom_response != Null %}
-                                            <p><strong>Custom Choice: </strong> {{ node.custom_response }}
+                                            <p><strong>Custom Response: </strong> {{ node.custom_response }}
                                             {% else %}
                                             <p><strong>Selected choice: </strong> {{ node.selected_choice.choice_text }}
                                             {% endif %}
