Custom Response Note (#61)
* Add special handling for displaying custom responses

--- a/simcon_project/templates/feedback/view_feedback.html
+++ b/simcon_project/templates/feedback/view_feedback.html
@@ -40,7 +40,13 @@
         </div>
         {% for node in response_nodes %}
         <div class="row">
-            <h3> Response {{node.position_in_sequence}}</h3>
+            <h3> Response {{node.position_in_sequence}}
+            {% if node.custom_response != Null %}
+            <p><strong>Custom Response: </strong> {{ node.custom_response }}
+            {% else %}
+            <p><strong>Selected choice: </strong> {{ node.selected_choice.choice_text }}
+            {% endif %}
+            </h3>
             <div class="row">
             {{node.template_node.description}}
             </div>
