--- a/simcon_project/templates/view_response.html
+++ b/simcon_project/templates/view_response.html
@@ -66,7 +66,11 @@
                                     <div class="row">
                                         <div class="col">
                                             <p><strong>Step description: </strong> {{ node.template_node.description }} </p>
-                                            <p><strong>Selected choice: </strong> {{ node.selected_choice.choice_text }} </p>
+                                            {% if node.custom_response != Null %}
+                                            <p><strong>Custom Response: </strong> {{ node.custom_response }}
+                                            {% else %}
+                                            <p><strong>Selected choice: </strong> {{ node.selected_choice.choice_text }}
+                                            {% endif %}
                                             <audio src="{% get_media_prefix %}{{ node.audio_response }}" controls></audio>
                                         </div>
                                         <div class="col">
