--- a/simcon_project/templates/template_management/edit_folder_name_modal.html
+++ b/simcon_project/templates/template_management/edit_folder_name_modal.html
@@ -1,22 +1,20 @@
 <form method="post">
  {% csrf_token %}
  <div class="modal-header">
-    <h5 class="modal-title">Folder Content</h5>
+    <h5 class="modal-title">Edit Folder Name</h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
 
   <div class="modal-body">
-    {% for field in form %}
-    <div class="form-group{% if field.errors %} invalid{% endif %}">
-      <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-      {{ field }}
-      {% for error in field.errors %}
-        <p class="help-block">{{ error }}</p>
-      {% endfor %}
-    </div>
-    {% endfor %}
+     <div class="form-group{% if form.name.errors %} invalid{% endif %}">
+         <label for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
+         {{ form.name }}
+         {% for error in form.name.errors %}
+             <p class="help-block">{{ error }}</p>
+         {% endfor %}
+     </div>
   </div>
 
   <div class="modal-footer">
