--- a/simcon_project/templates/template_management/main_view.html
+++ b/simcon_project/templates/template_management/main_view.html
@@ -8,27 +8,43 @@
     <head>
         <title>SimCon | Templates</title>
         <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     </head>
     <body>
+        {% for message in messages %}
+            <div class="alert alert-warning">
+                <a class="close" href="#" data-dismiss="alert">×</a>
+                {{ message }}
+            </div>
+        {% endfor %}
         <div class="container-fluid" style="width: 80%">
             <div class="row">
                 <!-- Templates -->
                 <div class="col-8 mt-3">
-                    <h3 style="text-align: center">Templates</h3>
+                    {% if current_folder %}
+                        <h3 style="text-align: center">{{ current_folder.name }}</h3>
+                    {% else %}
+                        <h3 style="text-align: center">All Templates</h3>
+                    {% endif %}
                     <div class="row">
-                        <!-- Templates Search Bar-->
                         <div class="col">
-                            {% if folder_pk %}
-                                <form action="{% url 'management:folder-view' folder_pk %}" method="get">
+                            {% if current_folder %}
+                                <form action="{% url 'management:folder-view' current_folder.id %}" method="get" autocomplete="off">
                                     {% csrf_token %}
-                                    <input name="template-filter" type="text" placeholder="Search Templates" class="mb-3">
+                                    <input list="templates" name="template-filter" type="text" placeholder="Search Templates" class="mb-3">
                                 </form>
                             {% else %}
-                                <form action="{% url 'management:main'%}" method="get">
+                                <form action="{% url 'management:main'%}" method="get" autocomplete="off">
                                     {% csrf_token %}
-                                    <input name="template-filter" type="text" placeholder="Search Templates" class="mb-3">
+                                    <input list="templates" name="template-filter" type="text" placeholder="Search Templates" class="mb-3">
                                 </form>
                             {% endif %}
+                            <datalist id="templates">
+                                {% for template in templates %}
+                                    <option value="{{ template.name }}"></option>
+                                {% endfor %}
+                            </datalist>
                         </div>
                         <!-- Show/Hide Archived Templates Button -->
                         <div class="col">
@@ -36,13 +52,13 @@
                                 <form action="{% url 'management:display-archived-templates' 0 %}" method="post">
                                     {% csrf_token %}
                                     <input type="hidden" name="back" value="{{ request.path }}">
-                                    <button name="show-archived" class ="btn btn-outline-secondary" type="submit">Hide Archived Templates</button>
+                                    <button name="show-archived" class ="btn btn-outline-secondary" type="submit">Hide Archived</button>
                                 </form>
                             {% else %}
                                 <form action="{% url 'management:display-archived-templates' 1 %}" method="post">
                                     {% csrf_token %}
                                     <input type="hidden" name="back" value="{{ request.path }}">
-                                    <button name="show-archived" class ="btn btn-outline-secondary" type="submit">Display Archived Templates</button>
+                                    <button name="show-archived" class ="btn btn-outline-secondary" type="submit">Display Archived</button>
                                 </form>
                             {% endif %}
                         </div>
@@ -56,10 +72,29 @@
                         </div>
                     </div>
 
+                    {% if current_folder %}
+                        <form method="post" action="{% url 'management:edit-folder-templates' current_folder.id %}">
+                            {% csrf_token %}
+                            <div class="row">
+                                <div class="col col-sm-10">
+                                    <select class="template-select-multiple w-100" name="templates" multiple="multiple">
+                                        {% for template in all_templates%}
+                                            <option value="{{ template.id }}" title="{{ template.name }}">{{ template.name }}: {{template.creation_date }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                                <div class="col">
+                                    <input type="hidden" name="back" value="{{ request.path }}">
+                                    <input class="btn btn-sm btn-outline-secondary" type="submit" value="Add">
+                                </div>
+                            </div>
+                        </form>
+                    {% endif %}
+
                     {%  if templateTable %}
                         {% render_table templateTable %}
                     {% else %}
-                        {% if folder_pk %}
+                        {% if current_folder %}
                             <div>There are no templates in this folder</div>
                         {% else %}
                             <div>There are no templates to show at the moment</div>
@@ -73,48 +108,39 @@
 
                     <div class="row">
                         <div class="col">
-                            <!-- Folder Search Bar-->
-                            {% if folder_pk %}
-                                <form action="{% url 'management:folder-view' folder_pk %}" method="get">
+                            {% if current_folder %}
+                                <form action="{% url 'management:folder-view' current_folder.id %}" method="get" autocomplete="off">
                                     {% csrf_token %}
-                                    <input name="folder-filter" type="text" placeholder="Search Folders" class="mb-3">
+                                    <input list="folders" name="folder-filter" type="text" placeholder="Search Folders" class="mb-3">
                                 </form>
                             {% else %}
-                                <form action="{% url 'management:main' %}" method="get">
+                                <form action="{% url 'management:main' %}" method="get" autocomplete="off">
                                     {% csrf_token %}
-                                    <input name="folder-filter" type="text" placeholder="Search Folders" class="mb-3">
+                                    <input list="folders" name="folder-filter" type="text" placeholder="Search Folders" class="mb-3">
                                 </form>
                             {% endif %}
-                        </div>
-
-                        <div class="col" style="text-align: right">
-                            <!-- Create Folder Button--->
-                            <button id="create-folder" class="btn btn-outline-secondary" type="button" name="button">Create Folder</button>
+                            <datalist id="folders">
+                                {% for folder in all_folders %}
+                                    <option value="{{ folder.name }}"></option>
+                                {% endfor %}
+                            </datalist>
                         </div>
                     </div>
 
-                    {% if folder_pk %}
-                        <div class="row mb-3">
-                            <form method="post" action="{% url 'management:main' %}">
+                    <div class="row">
+                        <div class="col">
+                            <form method="post" action="{% url 'management:create-folder' %}">
                                 {% csrf_token %}
-                                <input id="back-to-all" class="btn btn-outline-success ml-3" type="submit" value="Back">
-                            </form>
-                            <button id="edit-folder" class="bs-modal btn btn-outline-secondary ml-3" type="button" name="button"
-                                    data-form-url="{% url 'management:edit-folder' folder_pk %}">Edit</button>
-                            <form method="post" action="{% url 'management:delete-folder' folder_pk %}">
-                                {% csrf_token %}
+                                {{ folder_creation_form }}
+                                <input type="submit" value="Create Folder" class="btn btn-sm btn-outline-secondary">
                                 <input type="hidden" name="back" value="{{ request.path }}">
-                                <button id="delete-folder" class="btn btn-outline-danger ml-3" type="submit">Delete</button>
                             </form>
                         </div>
-                    {% endif %}
+                    </div>
 
-                    {% if folderTable %}
-                        {% render_table folderTable %}
-                    {% else %}
-                        <div>There are no folders to show at the moment</div>
-                    {% endif %}
-
+                    {% block table-wrapper %}
+                        {% include "template_management/folder_table.html" with table=folderTable%}
+                    {% endblock %}
                 </div>
             </div>
         </div>
@@ -146,7 +172,30 @@
                 formURL: "{% url 'management:create-folder' %}",
                 modalID: "#create_modal"
             });
+
+            $('.template-select-multiple').select2({
+                placeholder: "Add Templates",
+                allowClear: true,
+                templateSelection: formatState,
+            });
         });
+
+        // Format so when a template is selected it only shows the template name
+        // inside the multiselect box.
+        function formatState (state) {
+            if (!state.id) {
+              return state.text;
+            }
+
+            var $state = $(
+              '<span><span></span></span>'
+            );
+
+            // Use .text() instead of HTML string concatenation to avoid script injection issues
+            $state.find("span").text(state.title);
+
+            return $state;
+        };
     </script>
     </body>
 {% endblock %}
