settings button and modal added.

--- a/simcon_project/templates/assignment_management/main_view.html
+++ b/simcon_project/templates/assignment_management/main_view.html
@@ -19,13 +19,13 @@
 
 
     <title>
-    {% block title %}Simulated Conversations | Assignment Management{% endblock %}
+    {% block title %}SimCon | Assignment Management{% endblock %}
     </title>
 
     {% block extrahead %} {% endblock %}
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <h1>Assignment Management</h1>
         {% if table %}
             {% render_table table %}
