--- a/simcon_project/templates/assignment_management/main_view.html
+++ b/simcon_project/templates/assignment_management/main_view.html
@@ -21,15 +21,27 @@
     <title>
     {% block title %}SimCon | Assignment Management{% endblock %}
     </title>
+    <link rel="shortcut icon" href="{% static './title_image/favicon.ico' %}" type="image/x-icon">
 
     {% block extrahead %} {% endblock %}
   </head>
   <body>
-    <div class="container-fluid">
-      <h1>Assignment Management</h1>
-        {% if table %}
-            {% render_table table %}
-        {% endif %}
+    <div class="container-fluid" style="width: 80%">
+        <div class="row">
+            <div class="col mt-3">
+                <form action="{% url 'assignments:create-assignment' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-outline-secondary" name="create_template">Create Assignment</button>
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col mt-3">
+                {% if table %}
+                    {% render_table table %}
+                {% endif %}
+            </div>
+        </div>
     </div> <!-- /container -->
 
     <!-- Bootstrap core JavaScript
