--- a/simcon_project/templates/assignment_management/view_settings_button.html
+++ b/simcon_project/templates/assignment_management/view_settings_button.html
@@ -4,6 +4,6 @@
 {% block content %}
     <button  class="bs-modal btn btn-outline-secondary btn-sm" type="button" name="button"
             data-form-url="{% url 'ass-management:view-settings' record.id %}">
-        View Students
+        View Settings
     </button>
 {% endblock %}
