small fix for settings modal.

--- a/simcon_project/templates/assignment_management/view_settings_modal.html
+++ b/simcon_project/templates/assignment_management/view_settings_modal.html
@@ -6,16 +6,13 @@
     {% csrf_token %}
 
     <div class="modal-header">
-      <h3 class="modal-title">Assigned Students</h3>
+      <h3 class="modal-title">Assignment Settings</h3>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
 
     <div class="modal-body">
-      {% if completion_string %}
-        <p>{{ completion_string }}</p>
-      {% endif %}
       {% if table %}
         {% render_table table %}
       {% endif %}
