--- a/simcon_project/templates/view_response.html
+++ b/simcon_project/templates/view_response.html
@@ -8,6 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
+        <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
         <title>
             SimCon | Response View
         </title>
