--- a/simcon_project/templates/student_delete_modal.html
+++ b/simcon_project/templates/student_delete_modal.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="modal-body">
-    <p>All responses related to this template will be deleted permanently.</p>
+    <p>This student will be deleted permanently.</p>
   </div>
 
   <div class="modal-footer">
