--- a/simcon_project/templates/remove_student_button.html
+++ b/simcon_project/templates/remove_student_button.html
@@ -3,6 +3,9 @@
     FolderTemplateTable and AllTemplateTable
  -->
 {% block content %}
-    <button id="delete-student" class="bs-modal btn btn-sm btn-outline-secondary" type="button" name="button"
-            data-form-url="{% url 'delete-student' record.id %}">Delete</button>
+    <form method="post" action="{% url 'remove-student' record.id%}">
+        <input id="remove-student" class="bs-modal btn btn-sm btn-outline-secondary" type="submit" value="Remove From Label">
+        <input type="hidden" name="back" value="{{ request.path }}">
+        {% csrf_token %}
+    </form>
 {% endblock %}
