--- a/simcon_project/templates/student_settings_view.html
+++ b/simcon_project/templates/student_settings_view.html
@@ -41,10 +41,7 @@
                         <div class="form-group">
                             <div class="mb-3">
                                 {{ field.label }}:
-                                {{ field.auto_id }}
-                                {% for error in field.errors %}
-                                    {{ error }}
-                                {% endfor %}
+                                {{ field }}
                             </div>
                         </div>
                     {% endfor %}
