--- a/simcon_project/templates/feedback/view_feedback.html
+++ b/simcon_project/templates/feedback/view_feedback.html
@@ -1,72 +1,83 @@
-<!DOCTYPE html>
 {% extends "student_base.html" %}
 {% load static %}
-<html lang="en">
-<head>
-    <title>
-       {% block title %} SimCon | Feedback {% endblock %}
-     </title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
-    <!-- prevent line breaks when using form fields -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style type="text/css">
-    form {display:inline; margin:0px; padding:0px;}
+{% block content %}
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <title>
+            {% block title %} SimCon | Feedback {% endblock %}
+        </title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
 
-    </style>
+    </head>
+    <body>
+    <div class="container-fluid mt-4">
+        <div class="col">
 
-</head>
-
-<body>
-<div class="container">
-    <h2> Feedback for: {{response.template.name}} </h2>
-    <p>You rated yourself: {{self_rating}}/5</p>
-
-    <div class="container">
-        {% block content %}
-        <div class="row">
-            <h2>Overall feedback:</h2>
-        </div>
-        <div class="row">
-            {{response.feedback}}
-        </div>
-        {% for node in response_nodes %}
-        <div class="row">
-            <h3> Response {{node.position_in_sequence}}
-            {% if node.custom_response != Null %}
-            <p><strong>Custom Response: </strong> {{ node.custom_response }}
-            {% else %}
-            <p><strong>Selected choice: </strong> {{ node.selected_choice.choice_text }}
-            {% endif %}
-            </h3>
-            <div class="row">
-            {{node.template_node.description}}
+            <!-- Template Information -->
+            <div class="row justify-content-center">
+                <div class="card w-50">
+                    <h4 class="card-header" style="text-align: center">Your Submission</h4>
+                    <div class="card-body">
+                        <div class="container" style="padding: 0 !important;">
+                            <div class="col">
+                                <div class="row">
+                                    <div class="col-10">
+                                        <h5><strong>Template Name: </strong> {{ response.template.name }} </h5>
+                                        <h5><strong>Submission Date: </strong> {{ response.completion_date }} </h5>
+                                        <h5><strong>Your Self Rating: </strong> {{ self_rating }}</h5>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="form-group">
+                                            <h5><strong>Feedback:</strong> {{ response.feedback }} </h5>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <audio src="{% get_media_prefix %}{{ node.audio_response }}" controls></audio>
-            </div>
-            <div class="col-sm-4">
-                {{node.transcription}}
-            </div>
-            <div class="col-sm-4" id="feedback">
-                {{node.feedback}}
-            </div>
-        </div>
-        {% endfor %}
 
-        {% endblock %}
+            <!-- Response nodes -->
+            {% for node in response_nodes %}
+                <div class="row justify-content-center mt-4">
+                    <div class="card w-50">
+                        <div class="container" style="padding: 0 !important;">
+                            <div class="card-body">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            <p><strong>Step description: </strong> {{ node.template_node.description }} </p>
+                                                {% if node.custom_response != Null %}
+                                                    <p class="mb-3"><strong>Custom Response: </strong> {{ node.custom_response }}
+                                                {% else %}
+                                                    <p class="mb-3"><strong>Selected choice: </strong> {{ node.selected_choice.choice_text }}
+                                                {% endif %}
+                                            <audio src="{% get_media_prefix %}{{ node.audio_response }}" controls></audio>
+                                        </div>
+                                        <div class="col">
+                                            <form method="post">
+                                                {% csrf_token %}
+                                                <input type="hidden" value="{{ node.id }}" name="template-node-response-id"/>
+                                                <p><strong>Transcription: </strong> </p>
+                                                <p>{{ node.transcription }}</p>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
-
-</div> <!-- /container -->
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-
-<!-- Placed at the end of the document so the pages load faster -->
-</body>
-</html>
+    </body>
+    </html>
+{% endblock %}
