Even more ui work

--- a/simcon_project/templates/feedback/view_feedback_button.html
+++ b/simcon_project/templates/feedback/view_feedback_button.html
@@ -6,13 +6,13 @@
     <button
         class="bs-modal btn btn-sm btn-outline-primary" type="button" name="button"
         data-form-url="{% url 'feedback:select-feedback' record.id record.conversation_templates__id  %}">
-        View New Feedback
+        Feedback
     </button>
     {% else %}
     <button
-        class="bs-modal btn btn-sm btn-outline-secondary pl-4 pr-4" type="button" name="button"
+        class="bs-modal btn btn-sm btn-outline-secondary" type="button" name="button"
         data-form-url="{% url 'feedback:select-feedback' record.id record.conversation_templates__id  %}">
-        View Feedback
+        Feedback
     </button>
     {% endif %}
 {% endblock %}
