--- a/simcon_project/templates/registration/login.html
+++ b/simcon_project/templates/registration/login.html
@@ -13,11 +13,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'users/base.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'users/center_container.css' %}">
 </head>
 <body>
 
-<div class="container">
+<div class="center-container">
     <div class="card p-5">
         <form method="post">
             {% csrf_token %}
