--- a/simcon_project/static/users/base.css
+++ b/simcon_project/static/users/base.css
@@ -1,5 +1,6 @@
-body {
+html, body {
     background-color: dimgrey;
+    height: 100%;
 }
 
 /**
@@ -85,4 +86,25 @@ Pagination style
 
 .pointer-on-hover {
     cursor: pointer;
+}
+
+/**
+Random elements
+ */
+
+.center-container {
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.no-bullet-unordered-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+input[type="radio"]{
+    vertical-align: middle;
 }
