--- a/simcon_project/templates/student_settings_view.html
+++ b/simcon_project/templates/student_settings_view.html
@@ -40,7 +40,9 @@
                     {% for field in form %}
                         <div class="form-group">
                             <div class="mb-3">
-                                {{ field.label }}:
+                                <div class="mb-2">
+                                    {{ field.label }}:
+                                </div>
                                 {{ field }}
                             </div>
                         </div>
