added hamburger menu to template and assignment management. Buttons contained in dropdown now. removed html files for those buttons, contained in hamburger html.

--- a/simcon_project/templates/researcher_base.html
+++ b/simcon_project/templates/researcher_base.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Created for Simulated Conversations Senior Capstone Project">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{% static './users/base.css' %}">
     <link rel="shortcut icon" href="{% static './title_image/favicon.ico' %}" type="image/x-icon">
